--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <script id="pos-vs" type="x-shader/x-vertex">
       attribute vec3 aPos;
 
-      void main(void) {
+      void main() {
         gl_Position = vec4(aPos, 1.0);
       }
     </script>
     <script id="green-fs" type="x-shader/x-fragment">
       precision mediump float;
 
-      void main(void) {
+      void main() {
         gl_FragColor = vec4(0.5, 1.0, 0.0, 1.0);
       }
     </script>
     <script id="overdraw-fs" type="x-shader/x-fragment">
       precision mediump float;
 
-      void main(void) {
+      void main() {
         gl_FragColor = vec4(1.0, 0.0, 0.0, 0.3);
       }
     </script>
